scrollbar fix!

--- a/src/Header.css
+++ b/src/Header.css
@@ -23,7 +23,7 @@ box-sizing: border-box;
 display: flex;
 border-bottom: 1px solid;
 border-color: #d9d9d9;
-height: 70px;
+flex: 0 0 70px;
 padding-left: 23px;
 padding-right: 23px;
 }
