--- a/src/styles/chatPage.css
+++ b/src/styles/chatPage.css
@@ -2,12 +2,11 @@
 .chatPageMainContainer {
     display: flex;
     background-color: #f0f9ff;
+    height: 0;
+    flex: 1 1 0;
 }
 
 .sideBar {
-    position: sticky;
-    z-index: 1;
-    top: 70px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -15,14 +14,14 @@
     width: 678px;
     background-color: #ffffff;
     border-right: 1px solid #d9d9d9;
+    overflow-y: auto;
 }
 
 .chatContainer {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
     height: 100%;
-    min-height: 100vh;
     width: 100%;
 }
 
@@ -30,9 +29,10 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
     padding-bottom: 10px;
     padding-top: 10px;
+    overflow-y: auto;
 }
 
 .chatInputContainer {
